ex3/testdata/typechecker/error/DuplicateField.java
class Wuff {
	public static void main(String[] args) {
	}
}

class DuplicateFields {
	int x;
	int x;
}